--- a/lab/manifests/nginx-2.yaml
+++ b/lab/manifests/nginx-2.yaml
@@ -1,7 +1,7 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: nginx
+  name: nginx2
   labels:
     name: nginx-deployment
   namespace: web-app
@@ -9,12 +9,12 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-     name: nginx
-     role: nginx
+     name: nginx2
+     role: nginx2
   template:
     spec:
       containers:
-        - name: nginx
+        - name: nginx2
           image: nginx:1.17.1
           imagePullPolicy: Always
           resources:
@@ -26,5 +26,5 @@ spec:
               cpu: 0.05
     metadata:
       labels:
-        name: nginx
-        role: nginx
+        name: nginx2
+        role: nginx2
